--- a/src/Rookie.Ecom.Customer/Pages/About.cshtml
+++ b/src/Rookie.Ecom.Customer/Pages/About.cshtml
@@ -1,19 +1,9 @@
 ﻿@page
 @model Rookie.Ecom.Customer.Pages.AboutModel
 @{
+    ViewData["Title"] = "About page";
+     Layout = "_LayoutAbout";
 }
-<!DOCTYPE html>
-<html lang="en">
-
-  <head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    
-
-  </head>
 
   <body>
 
