--- a/src/Rookie.Ecom.Customer/Pages/Contact.cshtml
+++ b/src/Rookie.Ecom.Customer/Pages/Contact.cshtml
@@ -1,10 +1,12 @@
 ﻿@page
 @model Rookie.Ecom.Customer.Pages.AboutModel
 @{
+    ViewData["Title"] = "Contact page";
+     Layout = "_LayoutContact";
 }
-  <body>
 
-    <!-- ***** Preloader Start ***** -->
+
+   
     <div id="preloader">
         <div class="jumper">
             <div></div>
@@ -12,11 +14,7 @@
             <div></div>
         </div>
     </div>  
-    <!-- ***** Preloader End ***** -->
-
-   
-
-    <!-- Page Content -->
+    
     <div class="page-heading contact-heading header-text">
       <div class="container">
         <div class="row">
@@ -220,6 +218,4 @@
     </script>
 
 
-  </body>
-
-</html>
+  
