--- a/src/Rookie.Ecom.Customer/Pages/Product.cshtml
+++ b/src/Rookie.Ecom.Customer/Pages/Product.cshtml
@@ -1,7 +1,8 @@
 ﻿@page
 @model Rookie.Ecom.Customer.Pages.ProductModel
 @{
-
+    ViewData["Title"] = "Product page";
+     Layout = "_LayoutProduct";
 }
 <!DOCTYPE html>
 <html lang="en">
