--- a/src/Rookie.Ecom.Customer/Pages/Shared/_LayoutAbout.cshtml
+++ b/src/Rookie.Ecom.Customer/Pages/Shared/_LayoutAbout.cshtml
@@ -19,13 +19,13 @@
     <header class="">
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index"><h2>Rookie.Ecom.<em>Customer</em></h2></a>
+                <a class="navbar-brand" asp-area="" asp-page="/Product"><h2>Rookie.Ecom.<em>Customer</em></h2></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-page="/Index">
                                 Home
                             </a>
@@ -34,7 +34,7 @@
                             <a class="nav-link" asp-area="" asp-page="/Product">Our Products</a>
 
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item  active">
                             <a class="nav-link" asp-area="" asp-page="/About">About</a>
 
                         </li>
